# xorg__lib__libXprintAppUtil

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac  xprintapputil.pc.in
include/X11/: .cvsignore
src/: .cvsignore  Makefile.am  xpapputil.c
